--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <meta property="og:type" content="website" />
         <meta
             property="og:url"
-            content="https://portfolio.learnhtmlcss.online/"
+            content="https://kfinn315.github.io/"
         />
         <meta property="og:title" content="Kevin Finn | Web developer" />
         <meta
@@ -64,7 +64,7 @@
         <meta property="twitter:card" content="summary_large_image" />
         <meta
             property="twitter:url"
-            content="https://portfolio.learnhtmlcss.online/"
+            content="https://kfinn315.github.io/"
         />
         <meta property="twitter:title" content="Kevin Finn | Web developer" />
         <meta
@@ -86,9 +86,7 @@
                     />
                     <ul class="nav-links">
                         <li>
-                            <a href="#about-me" class="btn btn--nav"
-                                >About me</a
-                            >
+                            <!-- <a href="#about-me" class="btn btn--nav">About me</a> -->
                         </li>
                     </ul>
                 </div>
@@ -126,7 +124,7 @@
                         <strong>modern technology</strong>.
                     </p>
                 </div>
-                <button id="scroll-down" aria-label="Scroll down">
+                <!-- <button id="scroll-down" aria-label="Scroll down">
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
                         height="48px"
@@ -139,7 +137,7 @@
                             stroke="var(--light-icon)"
                         />
                     </svg>
-                </button>
+                </button> -->
             </section>
         </main>
         <footer>
@@ -154,7 +152,7 @@
                         />
                         <div>
                             <p class="text--bold footer-name">
-                                &copy; 2023 Kevin Finn
+                                &copy; 2024 Kevin Finn
                             </p>
                             <p class="footer-rights">
                                 <small class="text--sm"
@@ -164,7 +162,7 @@
                         </div>
                     </div>
                     <div class="side">
-                        <p class="text--sm">@example on Social Media</p>
+                        <!-- <p class="text--sm">@example on Social Media</p>
                         <ul class="footer-social">
                             <li>
                                 <svg
@@ -198,7 +196,7 @@
                                     />
                                 </svg>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
